--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -1,9 +1,19 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
+    <style name="AppTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="android:editTextBackground">@drawable/rn_edit_text_material</item>
     </style>
+
+    <!-- Base application theme. -->
+<!--    <style name="Theme.MyApp" parent="Theme.MaterialComponents.DayNight.NoActionBar">-->
+<!--        <item name="android:editTextBackground">@drawable/rn_edit_text_material</item>-->
+<!--        <item name="android:statusBarColor">@android:color/transparent</item>-->
+<!--        <item name="android:windowLightStatusBar">false</item>-->
+<!--        <item name="android:navigationBarColor">#FFFFFF</item>-->
+<!--        <item name="android:navigationBarDividerColor">#E4E4E4</item>-->
+<!--        <item name="android:windowLightNavigationBar">true</item>-->
+<!--    </style>-->
 
 </resources>
